# corunner

./: Makefile  README.md  pyproject.toml
.github/workflows/: corunner.yml
corunner/: __init__.py  group.py  loggers.py  report.py  report_parser.py  runner.py  stats.py
tests/: report_parser_test.py  report_test.py  runner_test.py
