[tool.poetry]
name = "corunner"
version = "0.1.0"
description = ""
authors = ["Patrik Palmér <patrik.palmer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
click-spinner = "^0.1.10"
colorama = "^0.4.3"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.3"
mypy = "^0.782"
pytest = "^5.4.3"
importanize = "^0.7.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
